pridano dependency a prvni user a login page
security - loginController + enable csrf

prihlasovani a odhlasovani pro hardcoded user admin/admin

nova role ADMIN

vytvorena user repository, user entity a user service

pridana authority do user tabulky + customSecurityUser

upraveny security na ruzne url

pridana user entity a ostatni servisy

Rename userRole -> Role

Rename userRole -> Role

upravena join table pro rozjeti aplikace

upraven styling

upraveny URL a checkstyle issues

prejmenovana game zpatky na progress/game

upravena configurace pro h2 DB bez potreby prihlaseni

/game/ je pristupna pro roli USER i ADMIN

/game/ je pristupna pro roli USER i ADMIN
pri vytvoreni tymu se vytvori novy user s rolí USER

minor change v save team metode

review comment fix - vytvoreny servicy pro user a role

Add init credentials db script

pridan inicializacni hodnota pro uzivatele, OneToMany zmeneno na ManyToMany

--- a/src/main/resources/templates/cypher/form.html
+++ b/src/main/resources/templates/cypher/form.html
@@ -19,7 +19,7 @@
             <h2><span th:text="${heading}">Nadpis</span></h2>
         </div>
         <div class="col-sm-6">
-            <form action="#" th:action="@{/cypher/save}" th:object="${cypher}" method="post">
+            <form action="#" th:action="@{/admin/cypher/save}" th:object="${cypher}" method="post">
                 <div class="form-group">
                     <label for="cypherId">Id</label>
                     <input id="cypherId" class="form-control" th:field="*{cypherId}" readonly/>
