--- a/src/main/resources/templates/finalplace/form.html
+++ b/src/main/resources/templates/finalplace/form.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
     <h2>Místo ukončení</h2>
-    <form action="#" th:action="@{/finalplace/save}" th:object="${finalplace}" method="post">
+    <form action="#" th:action="@{/admin/finalplace/save}" th:object="${finalplace}" method="post">
         <div class="table-responsive">
             <table class="table" style="font-size: 18px">
                 <tr>
