--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -67,6 +67,10 @@
             <!--/.Content-->
         </div>
     </div>
+    <form action="/logout" method="post">
+        <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+        <button type="submit">Odhlásit</button>
+    </form>
 </div>
 
 <script th:inline="javascript">
@@ -88,7 +92,7 @@
             };
 
         $.ajax({
-            url: "/progress/takeHintOfCypher",
+            url: "/game/progress/takeHintOfCypher",
             type: 'post',
             data: data,
             success: function () {
@@ -106,7 +110,6 @@
 
     /*]]>*/
 </script>
-
 </body>
 </html>
 
